syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "Messages/CommonTypes.proto";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.TypeTests";

package grpc_server.api.protos.messages.type_tests;

message GuidTestDto {
    string guid_field = 1;
    repeated string guid_field_collection = 2;
    google.protobuf.StringValue guid_field_nullable = 3;
    ListOfString guid_field_nullable_collection = 4;
}
